--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Capture build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: repo
-        path: "*/build/*"
+        name: built-libraries
+        path: "*/build/libs/*.jar"
